# Flux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_COMPARISON.md  FIX_SUMMARY.md  FIX_SUMMARY_FINAL.md  LICENSE  PROJECT_REVIEW_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V1.7.md  test_archive.tar.manifest.json  test_backup.tar.fluxmanifest  test_backup.tar.manifest.json  test_backup_incremental.tar.fluxmanifest  test_minimal_symlink.rs
.github/workflows/: benchmark.yml  ci.yml  release.yml
apps/flux-cli/: Cargo.toml
apps/flux-cli/src/: cloud_handler.rs  extract.rs  interactive.rs  main.rs
apps/flux-cli/tests/: cli_test.rs  exit_codes_test.rs
apps/flux-gui/: Cargo.toml
apps/flux-gui/src/: main.rs  progress_tracker.rs  task.rs  theme.rs
apps/flux-gui/src/app/: state.rs
apps/flux-gui/src/layout/: mod.rs
apps/flux-gui/src/views/: browser_view.rs  sync_view.rs
benches/: comparison_bench.rs  compression_bench.rs  extraction_bench.rs
crates/flux/: Cargo.toml
crates/flux-cli/src/: cloud_handler.rs  extract.rs  main.rs  modify.rs  tui.rs
crates/flux-cli/tests/: cloud_integration_test.rs  interactive_test.rs
crates/flux-cloud/: Cargo.toml  README.md
crates/flux-cloud/examples/: basic_usage.rs
crates/flux-cloud/src/: buffer.rs  error.rs  lib.rs  reader.rs  runtime.rs  store.rs  writer.rs
crates/flux-cloud/tests/: integration_tests.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: config.rs  error.rs  interactive.rs  lib.rs  manifest.rs  metadata.rs  security.rs  strategy.rs  utils.rs
crates/flux-core/src/archive/: extractor.rs  incremental.rs  mod.rs  modifier.rs  secure_extractor.rs  sevenz.rs  sevenz_extractor.rs  tar.rs  tar_extractor.rs  zip.rs  zip_extractor.rs
crates/flux-core/tests/: archive_test.rs  config_test.rs  extract_options_test.rs  metadata_preservation_test.rs  path_traversal_test.rs  security_test.rs  strategy_test.rs  symlink_loop_test.rs  symlink_test.rs
crates/flux-gui/: Cargo.toml  build.rs
crates/flux-gui/src/: animation.rs  logging.rs  main.rs  progress_tracker.rs  task.rs  theme.rs
crates/flux-gui/src/app/: archive_modify.rs  events.rs  mod.rs  state.rs  ui.rs
crates/flux-gui/src/components/: mod.rs
crates/flux-gui/src/layout/: mod.rs
crates/flux-gui/src/views/: browser_table_view.rs  browser_view.rs  extracting_view.rs  mod.rs  optimized_browser_view.rs  packing_view.rs  packing_view_modern.rs  sync_view.rs
crates/flux-testing/: Cargo.toml
crates/flux-testing/src/: assertions.rs  fixtures.rs  helpers.rs  lib.rs
crates/flux/src/: tui.rs
crates/flux/tests/: cloud_integration_test.rs  integration_test.rs  interactive_test.rs  symlink_integration_test.rs
docs/: ARCHIVE_MODIFICATION_COMPLETE.md  CODE_QUALITY_IMPROVEMENTS.md  IMPROVEMENTS.md  P0_IMPLEMENTATION_GUIDE.md  ROADMAP.md  SECURITY_AND_PERFORMANCE_IMPROVEMENTS.md  TECHNICAL_IMPROVEMENTS.md
docs/assets/: README.md
examples/: basic_usage.sh  config.toml  demo.sh
flux/: CHANGELOG.md  Cargo.toml  README.md  debug_strategy.rs  entropy_test  entropy_test.rs  test_all_features.sh  test_debug.rs  test_entropy2.rs
flux-gui/: Cargo.toml
flux/.github/workflows/: release.yml
flux/benches/: comparison_bench.rs  compression_bench.rs  extraction_bench.rs
flux/docs/: FLUX_EVOLUTION_ROADMAP.md  FUTURE_ROADMAP.md  MILESTONE_1_PLAN.md  UI_REDESIGN_IMPLEMENTATION.md
flux/examples/: cloud_usage.sh
flux/flux-cli/: Cargo.toml
flux/flux-cli/src/: extract.rs  interactive.rs  main.rs  tui.rs
flux/flux-cli/tests/: 7z_test.rs  exit_codes_test.rs  integration_test.rs  symlink_integration_test.rs
flux/flux-cloud/: Cargo.toml  README.md
flux/flux-cloud/src/: lib.rs  reader.rs  store.rs  writer.rs
flux/flux-core/src/: interactive.rs  progress.rs
flux/flux-core/src/archive/: extractor.rs  sevenz_extractor.rs  tar.rs  tar_extractor.rs
flux/flux-core/tests/: archive_test.rs  extract_options_test.rs
flux/flux-gui/: Cargo.toml  README.md  build.rs
flux/flux-gui/src/: app.rs  logging.rs  main.rs  state.rs  task.rs  theme.rs  worker.rs
flux/flux-gui/src/app/: events.rs  mod.rs  state.rs  ui.rs
flux/flux-gui/src/layout/: mod.rs
flux/flux-gui/src/views/: browser_table_view.rs  browser_view.rs  extracting_view.rs  mod.rs  packing_view.rs
flux/flux-lib/: Cargo.toml
flux/flux-lib/src/: config.rs  error.rs  lib.rs  manifest.rs  strategy.rs
flux/flux-lib/src/archive/: incremental.rs  mod.rs  sevenz.rs  tar.rs  zip.rs  zip_extractor.rs
flux/flux-lib/tests/: archive_test.rs  config_test.rs  extract_options_test.rs  metadata_preservation_test.rs  path_traversal_test.rs  security_test.rs  strategy_test.rs  symlink_loop_test.rs  symlink_test.rs
flux/scripts/: generate_icons.sh
flux/test_data/7z_test/: test.txt
scripts/: build.sh  complete_p0_tasks.sh  create_default_icon.py  demo_archive_modification.sh  test_large_archive_gui.sh  test_release.sh
test_sync/: file1.txt
tests/: debug_strategy.rs  test_debug.rs  test_entropy2
