[workspace]
resolver = "2"
members = [
    "crates/flux",
    "crates/flux-gui",
    "crates/flux-core",
    "crates/flux-cloud",
    "crates/flux-testing"
]

# Inherit workspace configuration from flux/Cargo.toml
[workspace.package]
version = "1.7.0"
edition = "2021"
authors = ["Flux Contributors"]
license = "MIT"
repository = "https://github.com/your-username/flux"
homepage = "https://github.com/your-username/flux"
readme = "README.md"

[workspace.dependencies]
# Re-export all workspace dependencies from flux/Cargo.toml
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
xz2 = "0.1"
brotli = "6.0"
zip = "2.1"
walkdir = "2.5"
rayon = "1.10"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
filetime = "0.2"
chrono = "0.4"
dirs = "5.0"
glob = "0.3"
sevenz-rust = "0.6"
dialoguer = "0.11"
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.28", features = ["syntect"] }
crossbeam-channel = "0.5"
rfd = "0.14"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
egui-notify = "0.15"
egui-phosphor = "0.6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
embed-resource = "2.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
opt-level = 3