[workspace]
members = ["flux-lib", "flux-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flux Contributors"]
license = "MIT"
repository = "https://github.com/your-username/flux"
homepage = "https://github.com/your-username/flux"

[workspace.dependencies]
# Common dependencies for workspace
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
xz2 = "0.1"
brotli = "6.0"
zip = "2.1"
walkdir = "2.5"
rayon = "1.10"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
filetime = "0.2"