[package]
name = "flux-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-platform GUI for flux file archiver"
readme = "../../README.md"
keywords = ["gui", "compression", "archive", "egui"]
categories = ["gui", "compression"]

[[bin]]
name = "flux-gui"
path = "src/main.rs"

[dependencies]
flux-core = { path = "../../crates/flux-core" }  # Using flux-core as the core library
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
egui-phosphor = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
embed-resource = "2.4"

[package.metadata.bundle]
name = "Flux"
identifier = "com.flux.archiver"
icon = ["assets/icon.ico", "assets/icon.png", "assets/icon.icns"]
version = "1.7.0"
resources = []
copyright = "Copyright (c) 2024 Flux Contributors"
category = "public.app-category.utilities"
short_description = "A fast, modern file archiver"
long_description = """
Flux is a high-performance file archiver with an intuitive graphical interface.

Features:
• Support for multiple archive formats (ZIP, TAR, 7Z)
• Smart compression with automatic format selection
• Real-time progress tracking
• Secure extraction with path traversal protection
• Cross-platform support
"""
osx_frameworks = []