[package]
name = "flux-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core synchronous I/O library for flux - a cross-platform file archiver with intelligent compression"
readme = "../README.md"
keywords = ["compression", "archive", "tar", "zip", "zstd"]
categories = ["compression", "filesystem", "encoding"]

[dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
xz2 = { workspace = true }
brotli = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
filetime = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
sevenz-rust = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "compression_bench"
harness = false
path = "../../benches/compression_bench.rs"

[[bench]]
name = "extraction_bench"
harness = false
path = "../../benches/extraction_bench.rs"

[[bench]]
name = "comparison_bench"
harness = false
path = "../../benches/comparison_bench.rs"