[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Blazing-fast file archiver with intelligent compression - CLI interface"
readme = "../README.md"
keywords = ["compression", "archive", "tar", "zip", "cli"]
categories = ["command-line-utilities", "compression", "filesystem"]

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
flux-lib = { path = "../flux-lib" }
clap = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }