[package]
name = "flux-cloud"
version = "0.1.0"
edition = "2021"
authors = ["Flux Contributors"]
description = "Cloud storage adaptation layer for Flux archive tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FractalFir/flux"
keywords = ["cloud", "storage", "s3", "archive", "adapter"]
categories = ["filesystem", "network-programming"]

[dependencies]
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
object_store = { version = "0.11", features = ["aws", "gcp", "azure", "http"] }
bytes = "1.8"
futures-util = "0.3"
thiserror = "1.0"
tracing = "0.1"
url = "2.5"
async-trait = "0.1"
lru = "0.12"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
uuid = { version = "1.11", features = ["v4"] }