[package]
name = "flux-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-platform GUI for flux file archiver"
readme = "../README.md"
keywords = ["gui", "compression", "archive", "egui"]
categories = ["gui", "compression"]

[[bin]]
name = "flux-gui"
path = "src/main.rs"

[dependencies]
flux-lib = { path = "../flux-lib" }
egui = { workspace = true }
eframe = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }